@@ -4,62 +4,83 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.LinkedList;
 import java.util.List;
 
+import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
-import org.python.util.PythonInterpreter;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.util.FileSystemUtils;
+
+import de.hsrm.mi.swt.snackman.services.ReadMazeService;
 
 @SpringBootTest
-public class MazeTest {
+class MazeTest {
     
-    public MazeTest(){
-        String path = System.getProperty("user.dir") + "/src/main/java/de/hsrm/mi/swt/snackman/Maze.py";
+    @Autowired
+    ReadMazeService mazeService;
 
-        try(PythonInterpreter interpreter = new PythonInterpreter()){
-            interpreter.execfile(path);
+    private static final String MAZE_FILE_PATH = "./extensions/map/Maze.txt";
+    private static final Path workFolder = Paths.get("./extensions").toAbsolutePath();
+
+    @BeforeAll
+    static void fileSetUp() {
+        try{
+            tearDownAfter();  
+        }catch(Exception e){
+            System.out.println("No file to delete");
+        }   
+        SnackmanApplication.checkAndCopyResources();
+        assert Files.exists(workFolder.resolve("maze"));
+        assert Files.exists(workFolder.resolve("map"));
+    }
+
+    @AfterAll
+    static void tearDownAfter() throws IOException {
+        if (Files.exists(workFolder)) {
+            FileSystemUtils.deleteRecursively(workFolder.toFile());
         }
     }
 
     @Test
-	void mazeExists(){
-		String filename = "./Maze.txt";
-        Path filePath = Path.of(filename);
-        Assertions.assertTrue(Files.exists(filePath), "Die Datei existiert nicht!");
+    void mazeExists() {
+        mazeService.generateNewMaze();
+        Path filePath = Paths.get(MAZE_FILE_PATH);
+        Assertions.assertTrue(Files.exists(filePath), "The Maze.txt file does not exist!");
+    }
 
-	}
+    @Test
+    void mazeHasContent() {
+        mazeService.generateNewMaze();
+        List<String> maze = readMazeFile();
 
-	@Test
-	void mazeHasContent(){
-		List<String> maze = new LinkedList<String>();
-		try {
-			maze = Files.readAllLines(Paths.get("./Maze.txt"));
-		} catch (IOException e) {
-			e.printStackTrace();
-		}
+        Assertions.assertFalse(maze.isEmpty(), "The Maze.txt file is empty!");
+    }
 
-		Assertions.assertTrue(maze.size() > 0, "Die Maze.txt ist leer");
-		System.out.println();
-	}
+    @Test 
+    void mazeHasDefinedCharacters() {
+        mazeService.generateNewMaze();
+        List<String> maze = readMazeFile();
 
-	@Test
-	void mazeHasDefindesCharacters(){
-		List<String> maze = new LinkedList<String>();
-		
-		try {
-			maze = Files.readAllLines(Paths.get("./Maze.txt"));
-		} catch (IOException e) {
-			e.printStackTrace();
-		}
+        for (int i = 0; i < maze.size(); i++) {
+            String line = maze.get(i);
+            for (char c : line.toCharArray()) {
+                Assertions.assertTrue(
+                    c == ' ' || c == '#' || c == 'o' || c == '0' || c == 'S' || c == 'G' || c == 'C',
+                    "Invalid character: '" + c + "' in maze at line " + i
+                );
+            }
+        }
+    }
 
-		for(int i = 0; i <= maze.size()- 1; i++){
-			String line = maze.get(i);
-			for(char c : line.toCharArray()){
-				Assertions.assertTrue(c == ' ' || c == '#' || c == 'o' || c == '0' || c == 'S' || c == 'G' || c == 'C', "Ungültiges Zeichen :" + c + " im Maze in Zeile : " + i);
-			}
-		}
-
-	}
+    // Helper method to read the Maze.txt file
+    private List<String> readMazeFile() {
+        try {
+            return Files.readAllLines(Paths.get(MAZE_FILE_PATH));
+        } catch (IOException e) {
+            throw new RuntimeException("Failed to read Maze.txt", e);
+        }
+    }
 }
